apps/workloads/infrastructure/templates/homelab.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homelab
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    # allows distribution of gateway ca bundle
    # by trust-manager
    trust: "enabled"
