apps/workloads/infrastructure/templates/longhorn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    security.kubernetes.io/enforce: privileged
    security.kubernetes.io/audit: privileged
    security.kubernetes.io/warn: privileged
