apps/workloads/infrastructure/templates/ca-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: ca-server
  namespace: homelab
  labels:
    app: ca-server
spec:
    selector:
      app: ca-server
    ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
    type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ca-server
  namespace: homelab
  labels:
    app: ca-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ca-server
  template:
    metadata:
      labels:
        app: ca-server
    spec:
      imagePullSecrets:
        - name: gcp-artifact-registry-secret
      containers:
        - name: ca-server
          image: "us-central1-docker.pkg.dev/quantify-self-dev/homelab/ca-server:latest"
          command: ["/usr/local/bin/ca-server"]
          args:
            - "-ca-cert-path=/etc/homelab/certificates/root-ca.pem"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ca-data
              mountPath: /etc/homelab/certificates
      volumes:
        - name: ca-data
          secret:
            secretName: homelab-root-ca-bundle
            items:
                - key: root-ca.pem
                  path: root-ca.pem
